# ChangeLog for x11-libs/qt-multimedia
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-multimedia/ChangeLog,v 1.15 2010/03/03 11:59:10 fauli Exp $

  03 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  qt-multimedia-4.6.2.ebuild:
  stable x86, bug 297299

  01 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  qt-multimedia-4.6.2.ebuild:
  amd64 stable wrt #297299

  18 Feb 2010; Alex Alexander <wired@gentoo.org> metadata.xml:
  added exceptions USE flag description

*qt-multimedia-4.6.2 (15 Feb 2010)

  15 Feb 2010; Dror Levin <spatz@gentoo.org> +qt-multimedia-4.6.2.ebuild:
  Version bump.

  09 Feb 2010; Dror Levin <spatz@gentoo.org> qt-multimedia-4.6.1.ebuild:
  Add ~ppc64 to newer version as well.

  09 Feb 2010; Dror Levin <spatz@gentoo.org> -qt-multimedia-4.6.0-r1.ebuild:
  Remove old.

  04 Feb 2010; Brent Baude <ranger@gentoo.org>
  qt-multimedia-4.6.0-r1.ebuild:
  Marking qt-multimedia-4.6.0-r1 ~ppc64 for bug 293671

  20 Jan 2010; Ben de Groot <yngwin@gentoo.org>
  qt-multimedia-4.6.0-r1.ebuild, qt-multimedia-4.6.1.ebuild:
  Restore macos keywords, make alsa dep required only for linux, bug 293671.

*qt-multimedia-4.6.1 (19 Jan 2010)

  19 Jan 2010; Ben de Groot <yngwin@gentoo.org> +qt-multimedia-4.6.1.ebuild:
  Version bump

  16 Jan 2010; Ben de Groot <yngwin@gentoo.org>
  qt-multimedia-4.6.0-r1.ebuild:
  Adding alsa-lib dependency, adding iconv useflag, dropping non-linux
  keywords (bug 293671).

*qt-multimedia-4.6.0-r1 (25 Dec 2009)

  25 Dec 2009; Jonathan Callen <abcd@gentoo.org>
  -qt-multimedia-4.6.0.ebuild, +qt-multimedia-4.6.0-r1.ebuild:
  Add prefix support, revbump due to otherwise unresolvable USE deps

  01 Dec 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  -qt-multimedia-4.6.0_rc1.ebuild:
  Remove Qt 4.6.0 RC

*qt-multimedia-4.6.0 (01 Dec 2009)

  01 Dec 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +qt-multimedia-4.6.0.ebuild:
  Version Bump to 4.6.0
