@@ -1,13 +1,13 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-multimedia/qt-multimedia-4.6.2.ebuild,v 1.3 2010/03/03 11:59:10 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-multimedia/qt-multimedia-4.6.2.ebuild,v 1.4 2010/04/05 07:38:21 maekke Exp $
 
 EAPI="2"
 inherit qt4-build
 
 DESCRIPTION="The Qt multimedia module"
 SLOT="4"
-KEYWORDS="amd64 ~ppc64 x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
+KEYWORDS="amd64 ~arm ~ppc64 x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
 IUSE="iconv"
 
 # currently supported audio backends are: alsa, mac, win32
