@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/qt-4.6.2.ebuild,v 1.3 2010/03/03 12:11:25 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/qt-4.6.2.ebuild,v 1.4 2010/04/05 07:40:10 maekke Exp $
 
 EAPI=2
 DESCRIPTION="The Qt toolkit is a comprehensive C++ application development framework"
@@ -8,7 +8,7 @@ HOMEPAGE="http://qt.nokia.com/"
 
 LICENSE="|| ( LGPL-2.1 GPL-3 )"
 SLOT="4"
-KEYWORDS="amd64 x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x64-solaris ~x86-solaris"
+KEYWORDS="amd64 ~arm x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x64-solaris ~x86-solaris"
 IUSE="dbus kde opengl qt3support"
 
 DEPEND=""
