@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/qt-multimedia
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-multimedia/ChangeLog,v 1.15 2010/03/03 11:59:10 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-multimedia/ChangeLog,v 1.16 2010/04/05 07:38:21 maekke Exp $
+
+  05 Apr 2010; Markus Meier <maekke@gentoo.org> qt-multimedia-4.6.2.ebuild:
+  add ~arm, bug #293671
 
   03 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
   qt-multimedia-4.6.2.ebuild:
